MC 1.18 and Java 11